# playwright_stealth

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
playwright_stealth/: __init__.py  case_insensitive_dict.py  constants.py  context_managers.py  scripts.py  stealth.py
playwright_stealth/js/evasions/: chrome.runtime.js
tests/: conftest.py  test_arg_patching.py  test_basics.py  test_evasion_smoketests.py
