[metadata]
name = playwright-stealth
version = 2.0.0rc1
author = AtuboDad
author_email = lcjasas@sina.com
maintainer = Mattwmaster58
maintainer_email = Mattwmaster58@gmail.com
description = playwright stealth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mattwmaster58/playwright_stealth
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    playwright

[options.package_data]
playwright_stealth = js/**/*.js